art17/static/style.css
/* GENERAL */
body {
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
}

.container.full-width {
    max-width: 100%;
}


/* HEADER */
.suite-bar {
    background: rgb(102, 204, 255);
    height: 30px;
}

.suite-bar ul.nav,
.suite-bar li.user {
    background: rgb(0, 153, 255);
    height: 30px;
}

.user-menu .nav>li>a {
    color: #fff;
    padding: 4px 15px;
}

.user-menu .nav>li>a:hover,
.user-menu .nav>li>a:focus {
    background: rgb(0, 153, 255);
    padding: 4px 15px;
    color: #000;
    text-decoration: underline;
}

.user-menu .nav>li.fixed>a,
.user-menu .nav>li.fixed>a:hover {
    color: #777;
    text-decoration: none;
    font-size: 1.4em;
    padding: 0 15px;
}

.user-menu {
    padding-right: 0;
}
#header {
    margin-bottom: 10px;
}

.sponsors-and-title {
    padding-top: 10px;
}

.sponsors-and-title img {
    height: 80px;
    padding-right: 30px;
}

#portal-title {
    display: inline-block;
    margin-bottom: 0;
    background: none;
    font-weight: bold;
    font-size: 20px;
    color: #000;
    height: auto;
}

.portal-logo img {
    height: 88px;
    padding-top: 10px;
}


/* GLOBAL MENU */
@media screen and (max-width: 1024px) {
  .global-menu .nav>li>a {
  padding: 10px 8px;
  }
}

.global-menu {
    background: rgb(102, 204, 51);
    height: 40px;
    margin-bottom: 10px;
}

.global-menu .nav-tabs {
    border-bottom: 0px;
}

.global-menu .nav-tabs>li>a {
    border: 0px;
    color: rgb(255, 255, 255);
    font-size: 13px
}

.global-menu .nav-tabs>li.active>a,
.global-menu .nav-tabs>li.active>a:hover,
.global-menu .nav-tabs>li.active>a:focus,
.global-menu .nav>li>a:hover,
.global-menu .nav>li>a:focus {
    background: none;
    border: 0px;
}

.global-menu .nav-tabs>li.active>a,
.global-menu .nav-tabs>li.active>a:hover,
.global-menu .nav-tabs>li.active>a:focus {
    color: #000;
}

.global-menu .nav-tabs>li>a:hover {
    text-decoration: underline;
}

/* footer */

#footer {
    background: rgb(102, 204, 51);
    height: 30px;
}

#footer .footer-logo {
    background: url(footer-logos.png) left top no-repeat;
    display: block;
    width: 300px;
    height: 66px;
    border: none;
}

/* content */

.breadcrumb {
    background: #e9f6fd;
}

.content {
    margin-bottom: 40px;
}

fieldset legend {
    color: #49a223;
    border-bottom: 1px solid #badca0;
}

.subject-details {
    margin: 10px 0 10px;
}

.trend, .method, .conclusion {
    text-align: center;
}

.conclusion-FV { background: #21B24A; }
.conclusion-FV a,
.conclusion-FV a:hover,
.conclusion-FV a:visited {
    color: white;
}
.conclusion-U1 { background: #FFC308; }
.conclusion-U2 { background: #EF1C21; }
.conclusion-U2 a,
.conclusion-U2 a:hover,
.conclusion-U2 a:visited {
    color: white;
}
.conclusion-XX {
    background-color: #b4b4b4;
}

.records {
    font-size: 11px;
}

.records-header th,
.records-section-header th {
    background: #F6F8EE;
    text-align: center;
}

.section-separator th {
    background: #FFF;
    font-size: 14px;
}

.record-actions {
    white-space: nowrap;
}

.records-section-header {
    border-top: 2px solid #aaa;
}

.records-commentstatus,
.records-commentdelete,
.consultation-delete-draft {
    display: inline;
}

.text-error a,
.text-error a:active,
.text-error a:focus,
.text-error a:hover,
.text-error a:visited {
    color: #b94a48 !important;
}

.records > tbody > tr > td {
    padding: 3px 3px;
}

.detail-menu li a {
    padding: 8px 10px;
    font-size: 12px;
}

#recorddetail-modal .modal-dialog {
    width: 1000px;
    font-size: 12px;
}

.recorddetail-table,
.comment {
    margin-top: -1px;
}

.recorddetail-table tr,
.recorddetail-table th {
    width: 30%;
}

.table-vertical tr th {
    width: auto !important;
}

.data-centered tbody tr th,
.data-centered tbody tr td {
    text-align: center;
    padding: 5px;
}

.data-centered tbody tr th {
    vertical-align: middle;
}

.sub-header td {
    width: 10px !important;
}

.data-centered tbody tr,
.data-centered tbody tr th {
    width: 10px !important;
}

.recorddetail-table .sub-header td {
    white-space: nowrap;
}

.recordvalue {
    font-size:12px;
    white-space: normal;
}

.reply .panel-body {
    font-weight: bold;
}

.reply-remove {
     display: inline;
}

.dashboard-missingrecord {
    text-align: center;
    background: #ddd;
}

.dashboard-commentcount {
    text-align: left;
    font-size: small;
}

.comment-info {
    color: #888;
}

.generalstatus {
    text-align: center;
}

.consultation-buttons {
    overflow: hidden;
}

.consultation-buttons p,
.consultation-buttons form
 {
    float: left;
    margin-right: 4px;
}

.consultation-status {
    float: right;
}

#comment-measures .form-control {
    width: auto;
}

#comment-measures select {
    width: 50px !important;
}

.draft {
    background-color: #efefef;
    font-style: italic;
}

#measures_container {
    font-size: 12px;
}

#measures_container th,
#measures_container .sub-header {
    text-align: center;
    white-space: nowrap;
}

.field-inline input {
    margin: 3px;
    display: inline;
    width: auto;
}

/* CUSTOM */
select[data-color="FV"] {
    background-color: #21B24A;
}

select[data-color="U1"] {
    background-color: #FFC308;
}

select[data-color="U2"] {
    background-color: #EF1C21;
}

select[data-color="XX"] {
    background-color: #FFFFFF;
}

select.form-control option {
    background-color: #fff;
}

 /* CONCLUSION */
.conclusion,
.conclusion:hover {
  display: inline-block;
  *display: inline;
  *zoom: 1;
  padding: 1px 2px;
  margin: -2px +3px;
  text-align: center;
  border-color: transparent;
  border-width: 1px;
  border-style: solid;
  border-radius: 2px;
  min-height: 17px;
  vertical-align: top;
  position: relative;
  color: #000;
  border-color: #ddd;
  background-color: #F6F6F6;
  min-width: 24px;
}
.conclusion,
.conclusion:hover,
a.conclusion,
a.conclusion:hover {
  text-decoration: none;
  color: #000;
}
a.conclusion:hover {
  border-color: blue;
}
.conclusion.inline {
  margin: 0;
  vertical-align: top;
  min-width: 42px;
  min-height: initial;
  text-align: left;
}
.conclusion.inline input[type="radio"] {
  float: right;
}

/* CONCLUSION TYPES */
.FV .conclusion,
.FV.conclusion {
  color: #000;
  border-color: #639500;
  background-color: #21B24A;
}
.FVU .conclusion,
.FVU.conclusion {
  color: #000;
  border-color: #639500;
  background-color: #9aca3b;
}
.U1 .conclusion,
.U1.conclusion {
  color: #000;
  border-color: #b05f00;
  background-color: #FFC308;
}
.U1U .conclusion,
.U1U.conclusion {
  color: #000;
  border-color: #b05f00;
  background-color: #FFC308;
}
.U1M .conclusion,
.U1M.conclusion {
  color: #000;
  border-color: #b05f00;
  background-color: #FFC308;
}
.U1P .conclusion,
.U1P.conclusion {
  color: #000;
  border-color: #b05f00;
  background-color: #FFC308;
}
.U2 .conclusion,
.U2.conclusion {
  color: #000;
  border-color: #742c2c;
  background-color: #EF1C21;
}
.U2U .conclusion,
.U2U.conclusion {
  color: #000;
  border-color: #742c2c;
  background-color: #EF1C21;
}
.U2M .conclusion,
.U2M.conclusion {
  color: #000;
  border-color: #742c2c;
  background-color: #EF1C21;
}
.U2P .conclusion,
.U2P.conclusion {
  color: #000;
  border-color: #742c2c;
  background-color: #EF1C21;
}
.XX .conclusion,
.XX.conclusion {
  color: #000;
  border-color: #888;
  background-color: #FFFFFF;
}
.XXU .conclusion,
.XXU.conclusion {
  color: #000;
  border-color: #888;
  background-color: #FFFFFF;
}
.XU .conclusion,
.XU.conclusion {
  color: #000;
  border-color: #888;
  background-color: #FFFFFF;
}
.XUU .conclusion,
.XUU.conclusion {
  color: #000;
  border-color: #888;
  background-color: #FFFFFF;
}
.NA .conclusion,
.NA.conclusion {
  color: #000;
  border-color: #4774c7;
  background-color: #78bbee;
}

